[gd_scene load_steps=45 format=3 uid="uid://comvjvdr77f48"]

[ext_resource type="Script" path="res://Menu.gd" id="1_r2thv"]
[ext_resource type="Texture2D" uid="uid://87nhpybd5d8b" path="res://Texture/Background.jpeg" id="2_1igrg"]
[ext_resource type="Texture2D" uid="uid://defu8131gyawq" path="res://Texture/botones/366b3db1b74fbd049efaa904bdd02436 (2).png" id="3_5xfe5"]
[ext_resource type="Texture2D" uid="uid://vbgpc8ntuntf" path="res://Texture/Playable Characters/Character sprite/Knight/Knight-Idle.png" id="4_j72gk"]
[ext_resource type="Texture2D" uid="uid://cei7j4yfpkcaw" path="res://Texture/botones/366b3db1b74fbd049efaa904bdd02436 (4).png" id="4_yk3o4"]
[ext_resource type="Texture2D" uid="uid://beee7rjn3i5gx" path="res://Texture/botones/366b3db1b74fbd049efaa904bdd02436 (1).png" id="5_s2sqp"]
[ext_resource type="Texture2D" uid="uid://dpynry271fibe" path="res://Texture/Playable Characters/Character sprite/Barbarian/Armored Axeman-Idle.png" id="5_ucfed"]
[ext_resource type="Texture2D" uid="uid://c73ymqivr0hrj" path="res://Texture/Playable Characters/Character sprite/Archer/Archer-Idle.png" id="6_0ewyf"]
[ext_resource type="Texture2D" uid="uid://basph8nv516py" path="res://Texture/botones/366b3db1b74fbd049efaa904bdd02436.png" id="6_apk0n"]
[ext_resource type="Texture2D" uid="uid://dkj3kmaaw02pm" path="res://Texture/Playable Characters/Character sprite/Wizard/Wizard-Idle.png" id="7_pdf8u"]
[ext_resource type="PackedScene" uid="uid://cylangw0sb7mt" path="res://transitions/transtion.tscn" id="8_y21xq"]
[ext_resource type="Texture2D" uid="uid://c1liwoiaxgefr" path="res://Texture/Credits.png" id="11_nwfa0"]
[ext_resource type="Texture2D" uid="uid://d17xnekb5xebp" path="res://Texture/botones/366b3db1b74fbd049efaa904bdd02436 (3).png" id="12_g0o8v"]
[ext_resource type="Texture2D" uid="uid://gshi1eb8hm31" path="res://Texture/32x32 Blue Bubble Buttons/Icons Only Buttons/Exit_Red_Icon_01.png" id="13_goa55"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v0s1l"]
atlas = ExtResource("4_j72gk")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qkn8"]
atlas = ExtResource("4_j72gk")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xucoo"]
atlas = ExtResource("4_j72gk")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktlje"]
atlas = ExtResource("4_j72gk")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnkgh"]
atlas = ExtResource("4_j72gk")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_elwp8"]
atlas = ExtResource("4_j72gk")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_h06ok"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0s1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qkn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xucoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktlje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnkgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elwp8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_n8j1b"]
atlas = ExtResource("5_ucfed")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qy1q"]
atlas = ExtResource("5_ucfed")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwhxt"]
atlas = ExtResource("5_ucfed")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0duj0"]
atlas = ExtResource("5_ucfed")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_75jwl"]
atlas = ExtResource("5_ucfed")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5opjp"]
atlas = ExtResource("5_ucfed")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_i28r4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8j1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qy1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwhxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0duj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75jwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5opjp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ofows"]
atlas = ExtResource("6_0ewyf")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdulj"]
atlas = ExtResource("6_0ewyf")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_56jqo"]
atlas = ExtResource("6_0ewyf")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d3m5"]
atlas = ExtResource("6_0ewyf")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cl4t"]
atlas = ExtResource("6_0ewyf")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cddsj"]
atlas = ExtResource("6_0ewyf")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_1higw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofows")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdulj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56jqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d3m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cl4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cddsj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_at5gw"]
atlas = ExtResource("7_pdf8u")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w0sw"]
atlas = ExtResource("7_pdf8u")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1nqv"]
atlas = ExtResource("7_pdf8u")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0qex"]
atlas = ExtResource("7_pdf8u")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yka1"]
atlas = ExtResource("7_pdf8u")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyv7g"]
atlas = ExtResource("7_pdf8u")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_8gb11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at5gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w0sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1nqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0qex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yka1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyv7g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_iq6sh"]
resource_name = "hide"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p71j1"]
_data = {
"hide": SubResource("Animation_iq6sh")
}

[node name="Node" type="Node"]
script = ExtResource("1_r2thv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.85
anchor_bottom = 16.175
offset_right = -9.15527e-05
offset_bottom = -4.57764e-05
texture = ExtResource("2_1igrg")
expand_mode = 1

[node name="Play" type="TextureRect" parent="Control"]
layout_mode = 2
offset_left = 35.0
offset_top = 172.0
offset_right = 718.0
offset_bottom = 550.0
scale = Vector2(0.426301, 0.193423)
texture = ExtResource("3_5xfe5")

[node name="Play" type="Button" parent="Control/Play"]
layout_mode = 2
offset_left = 32.8407
offset_right = 715.841
offset_bottom = 378.0
scale = Vector2(0.909347, 0.977223)
flat = true

[node name="Join" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 393.0
offset_top = 278.0
offset_right = 1625.0
offset_bottom = 1034.0
scale = Vector2(0.0564944, 0.0849418)
texture = ExtResource("4_yk3o4")

[node name="Join" type="Button" parent="Control/Join"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
offset_left = 17.7007
offset_top = -11.7727
offset_right = 197.701
offset_bottom = 64.2273
scale = Vector2(6.99436, 10.7535)
flat = true

[node name="test" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 358.0
offset_top = 173.0
offset_right = 1590.0
offset_bottom = 929.0
scale = Vector2(0.0584407, 0.0945107)
texture = ExtResource("4_yk3o4")

[node name="Button" type="Button" parent="Control/test"]
layout_mode = 0
offset_left = 102.668
offset_top = 42.3234
offset_right = 329.668
offset_bottom = 166.323
scale = Vector2(4.70175, 5.96319)
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 24.0
offset_top = 277.0
offset_right = 708.0
offset_bottom = 353.0

[node name="Name" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 22.0
offset_top = 369.0
offset_right = 638.0
offset_bottom = 747.0
scale = Vector2(0.529823, 0.203187)
texture = ExtResource("5_s2sqp")

[node name="Player_name" type="LineEdit" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 4.0
offset_top = 373.0
offset_right = 699.0
offset_bottom = 436.0
scale = Vector2(0.496746, 0.891312)
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
placeholder_text = "Ingrese un nombre"
alignment = 1
flat = true

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 29.0
offset_top = 266.0
offset_right = 645.0
offset_bottom = 644.0
scale = Vector2(0.498985, 0.239933)
texture = ExtResource("5_s2sqp")

[node name="IP_owner" type="LineEdit" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
offset_left = 1.0
offset_top = 271.0
offset_right = 501.0
offset_bottom = 347.0
scale = Vector2(0.708575, 0.959047)
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
placeholder_text = "Ingresa IP del host"
alignment = 1
flat = true

[node name="Creditos" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 550.0
offset_right = 173.0
offset_bottom = 666.0
scale = Vector2(0.443092, 0.529904)
texture = ExtResource("6_apk0n")

[node name="Credits" type="Button" parent="Control/Creditos"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(5.29511, 5.62735)
flat = true

[node name="Knight" type="AnimatedSprite2D" parent="Control"]
position = Vector2(548, 566.517)
scale = Vector2(4.76, 4.89035)
sprite_frames = SubResource("SpriteFrames_h06ok")

[node name="Sprite_button" type="Button" parent="Control/Knight"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.2941
offset_top = -14.8287
offset_right = -2.29414
offset_bottom = -6.82867
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.250536, 0.236201)
flat = true

[node name="Barbarian" type="AnimatedSprite2D" parent="Control"]
position = Vector2(826, 567)
scale = Vector2(5.31048, 4.61955)
sprite_frames = SubResource("SpriteFrames_i28r4")

[node name="Sprite_button2" type="Button" parent="Control/Barbarian"]
offset_left = -8.46338
offset_top = -13.6084
offset_right = 95.5366
offset_bottom = 90.3916
scale = Vector2(0.210013, 0.229857)
flat = true

[node name="Archer" type="AnimatedSprite2D" parent="Control"]
position = Vector2(702, 557.517)
scale = Vector2(5.33196, 4.58693)
skew = 0.0151127
sprite_frames = SubResource("SpriteFrames_1higw")
flip_h = true

[node name="Sprite_button3" type="Button" parent="Control/Archer"]
offset_left = -11.9828
offset_top = -12.8641
offset_right = 92.0172
offset_bottom = 91.1359
scale = Vector2(0.213964, 0.222792)
flat = true

[node name="Wizard" type="AnimatedSprite2D" parent="Control"]
position = Vector2(1008, 572)
scale = Vector2(5.31048, 4.61955)
sprite_frames = SubResource("SpriteFrames_8gb11")
flip_h = true

[node name="Sprite_button2" type="Button" parent="Control/Wizard"]
offset_left = -10.1686
offset_top = -13.6377
offset_right = 93.8314
offset_bottom = 90.3623
scale = Vector2(0.210013, 0.229857)
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_p71j1")
}

[node name="BGcreditos" type="ColorRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.8858, 16.1953)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="BGcreditos"]
layout_mode = 0
offset_left = 1.59248
offset_top = 7.53306
offset_right = 193.592
offset_bottom = 214.533
scale = Vector2(0.222238, 0.162775)
theme_override_font_sizes/font_size = 20
text = "Alcala Jesus,
Armas Sebastian,
Brito Gregorit,
Medina Jhuliana,
Velazquez Angel,
Villaroel Antonio"

[node name="Credits" type="TextureRect" parent="."]
visible = false
offset_left = 216.0
offset_top = -73.0
offset_right = 630.0
offset_bottom = 427.0
scale = Vector2(1.61361, 0.586363)
texture = ExtResource("11_nwfa0")

[node name="Cerrar" type="TextureRect" parent="."]
visible = false
offset_left = 1090.0
offset_top = 8.0
offset_right = 1236.0
offset_bottom = 126.0
scale = Vector2(0.407968, 0.480366)
texture = ExtResource("12_g0o8v")

[node name="close" type="Button" parent="Cerrar"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="TextureRect" type="TextureRect" parent="Cerrar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3.38842, 2.80197)
texture = ExtResource("13_goa55")

[node name="Transtion" parent="." instance=ExtResource("8_y21xq")]
tipo_de_animacion = "Fade in"

[node name="Transtion2" parent="." instance=ExtResource("8_y21xq")]
tipo_de_animacion = "Fade out"

[node name="cleaner" type="Timer" parent="."]
wait_time = 2.3
one_shot = true

[node name="cleaner2" type="Timer" parent="."]

[connection signal="button_down" from="Control/Play/Play" to="." method="_on_play_button_down"]
[connection signal="pressed" from="Control/Join/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Control/test/Button" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="Control/IP_owner" to="." method="_on_ip_text_submitted"]
[connection signal="pressed" from="Control/Creditos/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/Knight/Sprite_button" to="." method="_on_sprite_button_pressed"]
[connection signal="pressed" from="Control/Barbarian/Sprite_button2" to="." method="_on_sprite_button_pressed"]
[connection signal="pressed" from="Control/Archer/Sprite_button3" to="." method="_on_sprite_button_pressed"]
[connection signal="pressed" from="Control/Wizard/Sprite_button2" to="." method="_on_sprite_button_pressed"]
[connection signal="pressed" from="Cerrar/close" to="." method="_on_close_pressed"]
[connection signal="play" from="Transtion" to="." method="_on_transtion_play"]
[connection signal="timeout" from="cleaner" to="." method="_on_cleaner_timeout"]
[connection signal="timeout" from="cleaner2" to="." method="_on_cleaner_2_timeout"]
